--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <title>About us</title>
 </head>
 <body>
     <div class="about-banner">
@@ -26,13 +26,13 @@
                   <a class="nav-link" href="./about.html">About us</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Contact us</a>
+                  <a class="nav-link" href="./contact.html">Contact us</a>
                 </li>    
                 <li class="nav-item">
                   <a class="nav-link" href="#">Products</a>
                 </li>    
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Why M-Touch</a>
+                  <a class="nav-link" href="./ourservices.html">Our Services</a>
                 </li>    
               </ul>
             </div>  
@@ -43,28 +43,23 @@
     </div>
     <div class="about-details">
         <div class="about-details-1">
-            <img src="./images/keyboard.jpg" alt="keyboard">
-            <div class="about-details-content">
-                <p>
-                    Mtouch Technology is a manufacturer company which is providing you membrane front, Panel overlays, Front Panel, Keyboards, Labels, Stickers, PCB's, metal keyboards, hybrid keypads/flexible keybpads. All over India and International too
-                </p>
-            </div>
+          <div class="about-details-content">
+            <p>
+              Mtouch Technology is a manufacturer company which is providing you membrane front, Panel overlays, Front Panel, Keyboards, Labels, Stickers, PCB's, metal keyboards, hybrid keypads/flexible keybpads. All over India and International too
+              <br><br>
+              We are promising you that we make attractive design as per client requirements and dimensions. Our department work enthusiasm as we make our customer satisfaction which matter a lot working on it which is dispatching you right material and at the right time. 
+            </p>
+          </div>
+          <img src="./images/keyboard.jpg" alt="keyboard">
         </div>
+        
         <div class="about-details-1">
-            <div class="about-details-content">
-                <p>
-                   We are promising you that we make attractive design as per client requirements and dimensions. Our department work enthusiasm as we make our customer satisfaction which matter a lot working on it which is dispatching you right material and at the right time. 
-                </p>
-            </div>
-            <img src="./images/keyboard.jpg" alt="keyboard">
-        </div>
-        <div class="about-details-1">
-            <img src="./images/keyboard.jpg" alt="keyboard">
-            <div class="about-details-content">
-                <p>
-                    Our promising business goal is to maintai and improve customer satisfaction, deliver great product on time, provide good quality and providing you competitive cheaper and quality rate in market as per your requirements
-                </p>
-            </div>
+          <div class="about-details-content">
+            <p>
+              Our promising business goal is to maintain and improve customer satisfaction, deliver great product on time, provide good quality and providing you competitive cheaper and quality rate in market as per your requirements
+            </p>
+          </div>
+          <img src="./images/keyboard.jpg" alt="keyboard">
         </div>
     </div>
 </body>
