--- a/about.html
+++ b/about.html
@@ -1,66 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./about.css" />
     <title>About us</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="about-banner">
-        <nav class="navbar navbar-expand-md">
-            <a class="navbar-brand" href="./index.html">
-                <img class="logo" src="./images/mtouchlogo.jpg" alt="logo">
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-              <img src="./images/icons8-menu.svg" alt="menu" style="height:25px;">
-            </button>
-            <div class="collapse navbar-collapse" id="collapsibleNavbar">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" href="./index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./about.html">About us</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./contact.html">Contact us</a>
-                </li>    
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Products</a>
-                </li>    
-                <li class="nav-item">
-                  <a class="nav-link" href="./ourservices.html">Our Services</a>
-                </li>    
-              </ul>
-            </div>  
-          </nav>
-          <div class="about-banner-content">
-              <h2><b>ABOUT MEMBRANE TOUCH</b></h2>
-          </div>
+      <nav class="navbar navbar-expand-md">
+        <a class="navbar-brand" href="./index.html">
+          <img class="logo" src="./images/mtouchlogo.jpg" alt="logo" />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#collapsibleNavbar"
+        >
+          <img src="./images/icons8-menu.svg" alt="menu" style="height: 25px" />
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./about.html">About us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contact.html">Contact us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Products</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./ourservices.html">Our Services</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <div class="about-banner-content">
+        <h2><b>ABOUT MEMBRANE TOUCH</b></h2>
+      </div>
     </div>
     <div class="about-details">
-        <div class="about-details-1">
-          <div class="about-details-content">
-            <p>
-              Mtouch Technology is a manufacturer company which is providing you membrane front, Panel overlays, Front Panel, Keyboards, Labels, Stickers, PCB's, metal keyboards, hybrid keypads/flexible keybpads. All over India and International too
-              <br><br>
-              We are promising you that we make attractive design as per client requirements and dimensions. Our department work enthusiasm as we make our customer satisfaction which matter a lot working on it which is dispatching you right material and at the right time. 
-            </p>
-          </div>
-          <img src="./images/keyboard.jpg" alt="keyboard">
+      <div class="about-details-1">
+        <div class="about-details-content">
+          <p>
+            Mtouch Technology is a manufacturer company which is providing you
+            membrane front, Panel overlays, Front Panel, Keyboards, Labels,
+            Stickers, PCB's, metal keyboards, hybrid keypads/flexible keybpads.
+            All over India and International too
+            <br /><br />
+            We are promising you that we make attractive design as per client
+            requirements and dimensions. Our department work enthusiasm as we
+            make our customer satisfaction which matter a lot working on it
+            which is dispatching you right material and at the right time.
+          </p>
         </div>
-        
-        <div class="about-details-1">
-          <div class="about-details-content">
-            <p>
-              Our promising business goal is to maintain and improve customer satisfaction, deliver great product on time, provide good quality and providing you competitive cheaper and quality rate in market as per your requirements
-            </p>
-          </div>
-          <img src="./images/keyboard.jpg" alt="keyboard">
+        <img src="./images/keyboard.jpg" alt="keyboard" />
+      </div>
+
+      <div class="about-details-1">
+        <div class="about-details-content">
+          <p>
+            Our promising business goal is to maintain and improve customer
+            satisfaction, deliver great product on time, provide good quality
+            and providing you competitive cheaper and quality rate in market as
+            per your requirements
+          </p>
         </div>
+        <img src="./images/keyboard.jpg" alt="keyboard" />
+      </div>
     </div>
-</body>
+    <footer class="my-footer">
+      <!-- logo and description of company  -->
+      <div class="mtouch-footer-details">
+        <div class="footer-logo">
+          <img src="./images/mtouchlogo.jpg" alt="mtouch-logo" />
+          <h1 class="heading">Membrane Touch</h1>
+        </div>
+        <div class="footer-description">
+          <p>
+            <span>Membrane Touch Technology</span> is a manufacturer company of
+            membrane front panel overlays, Front panel keyboards, Labels,
+            Stickers, PCBs, Metal Keyboard, Hybrid Keypads/Flexible Keypads
+          </p>
+        </div>
+      </div>
+
+      <!-- links to all the pages -->
+      <div class="footer-navigation">
+        <ul>
+          <li>
+            <h5>
+              <a style="text-decoration: underline" href="./index.html"
+                >Main menu</a
+              >
+            </h5>
+          </li>
+          <li><a href="./ourservices.html">Our services</a></li>
+          <li><a href="./about.html">About us</a></li>
+          <li><a href="./contact.html">Contact us</a></li>
+          <li><a href="#">Products</a></li>
+        </ul>
+      </div>
+      <!-- follow us links of social media and site credits  -->
+      <div class="social-links">
+        <div class="social-media">
+          <h5>
+            <a style="text-decoration: underline" href="./index.html"
+              >Follow us</a
+            >
+          </h5>
+        </div>
+        <div class="site-credits">
+          <p>
+            Site Credits:
+            <a href="https://www.linkedin.com/in/altamash-qureshi-732362194/"
+              ><span>Altamash Qureshi</span></a
+            >
+          </p>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
