--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./contact.css" />
     <title>Membrane Touch</title>
   </head>
   <body>
@@ -57,8 +58,60 @@
         </div>
       </nav>
       <div class="contact-banner-content">
-          <h3>Contact Us</h3>
+        <h3>Contact Us</h3>
       </div>
     </div>
+
+    <footer class="my-footer">
+      <!-- logo and description of company  -->
+      <div class="mtouch-footer-details">
+        <div class="footer-logo">
+          <img src="./images/mtouchlogo.jpg" alt="mtouch-logo" />
+          <h1 class="heading">Membrane Touch</h1>
+        </div>
+        <div class="footer-description">
+          <p>
+            <span>Membrane Touch Technology</span> is a manufacturer company of
+            membrane front panel overlays, Front panel keyboards, Labels,
+            Stickers, PCBs, Metal Keyboard, Hybrid Keypads/Flexible Keypads
+          </p>
+        </div>
+      </div>
+
+      <!-- links to all the pages -->
+      <div class="footer-navigation">
+        <ul>
+          <li>
+            <h5>
+              <a style="text-decoration: underline" href="./index.html"
+                >Main menu</a
+              >
+            </h5>
+          </li>
+          <li><a href="./ourservices.html">Our services</a></li>
+          <li><a href="./about.html">About us</a></li>
+          <li><a href="./contact.html">Contact us</a></li>
+          <li><a href="#">Products</a></li>
+        </ul>
+      </div>
+      <!-- follow us links of social media and site credits  -->
+      <div class="social-links">
+        <div class="social-media">
+          <h5>
+            <a style="text-decoration: underline" href="./index.html"
+              >Follow us</a
+            >
+          </h5>
+        </div>
+        <div class="site-credits">
+          <p>
+            Site Credits:
+            <a href="https://www.linkedin.com/in/altamash-qureshi-732362194/"
+              ><span>Altamash Qureshi</span></a
+            >
+          </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
