products photo changed

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dosis&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -75,33 +80,41 @@
         <div class="slideshow-container">
           <!-- Full-width images with number and caption text -->
           <div class="mySlides my-fade">
-            <img src="./images/aboutus-banner.jpg" style="width: 100%" />
-            <!-- <div class="text">Caption Text</div> -->
+            <img src="./images/products/backlit-membrane-keypad-led-1.jpg" />
+            <div class="product-name"><h5>Backlit-membrane-keypad</h5></div>
           </div>
 
           <div class="mySlides my-fade">
-            <img src="./images/contactus.jpg" style="width: 100%" />
-            <!-- <div class="text">Caption Two</div> -->
+            <img src="./images/products/flexible-500x500.jpg" />
+            <div class="product-name"><h5>Flexible Keyboard</h5></div>
           </div>
 
           <div class="mySlides my-fade">
-            <img src="./images/front-panel-keyboard.jpg" style="width: 100%" />
-            <!-- <div class="text">Caption Three</div> -->
+            <img
+              src="./images/products/membrane keyboard PCB DESIGN DOUBLE SIDED.jpg"
+            />
+            <div class="product-name">
+              <h5>Membrane Keyboard PCB deisgn Double sided</h5>
+            </div>
           </div>
 
           <div class="mySlides my-fade">
-            <img src="./images/dice.jpg" style="width: 100%" />
-            <!-- <div class="text">Caption Three</div> -->
+            <img
+              src="./images/products/membrane-keypad-single-side-pcb-250x250.jpg"
+            />
+            <div class="product-name">
+              <h5>Membrane Keypad Single Sided</h5>
+            </div>
           </div>
 
           <div class="mySlides my-fade">
-            <img src="./images/lock.jpg" style="width: 100%" />
-            <!-- <div class="text">Caption Text</div> -->
+            <img src="./images/products/metal-keypad-500x500.jpg" />
+            <div class="product-name"><h5>Metal Keypad</h5></div>
           </div>
 
           <div class="mySlides my-fade">
-            <img src="./images/mouse.jpg" style="width: 100%" />
-            <!-- <div class="text">Caption Two</div> -->
+            <img src="./images/products/SA.jpg" />
+            <div class="product-name"><h5>Stickers</h5></div>
           </div>
 
           <!-- Next and previous buttons -->
@@ -187,7 +200,9 @@
         <div class="site-credits">
           <p>
             Site Credits:
-            <a href="https://www.linkedin.com/in/altamash-qureshi-732362194/"
+            <a
+              href="https://www.linkedin.com/in/altamash-qureshi-732362194/"
+              target="_blank"
               ><span>Altamash Qureshi</span></a
             >
           </p>
