social media images added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
     />
+    <link
+      href="https://use.fontawesome.com/releases/v5.0.4/css/all.css"
+      rel="stylesheet"
+    />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Dosis&display=swap"
@@ -125,7 +129,7 @@
       </div>
       <div class="our-customers-container">
         <div class="sub-heading">
-          <h3>Our Customers</h3>
+          <h3>Our Clients</h3>
         </div>
         <div class="our-customers">
           <div class="our-customer-img">
@@ -195,6 +199,38 @@
             <a style="text-decoration: underline" href="./index.html"
               >Follow us</a
             >
+            <ul class="social-media-list">
+              <li>
+                <img
+                  src="./images/social media icons/icons8-facebook-circled-48.png"
+                  alt="facebook-icon"
+                />
+              </li>
+              <li>
+                <img
+                  src="./images/social media icons/icons8-instagram-48.png"
+                  alt="instagram-icon"
+                />
+              </li>
+              <li>
+                <img
+                  src="./images/social media icons/icons8-linkedin-circled-48.png"
+                  alt="linkedin-icon"
+                />
+              </li>
+              <li>
+                <img
+                  src="./images/social media icons/icons8-twitter-circled-48.png"
+                  alt="twitter-icon"
+                />
+              </li>
+              <li>
+                <img
+                  src="./images/social media icons/icons8-whatsapp-48.png"
+                  alt="whatsapp-icon"
+                />
+              </li>
+            </ul>
           </h5>
         </div>
         <div class="site-credits">
