youtube icon added

--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
             which is dispatching you right material and at the right time.
           </p>
         </div>
-        <img src="./images/keyboard.jpg" alt="keyboard" />
+        <img src="./images/products/EMBOSSSEL2.jpg" alt="keyboard" />
       </div>
 
       <div class="about-details-1">
@@ -93,7 +93,7 @@
             per your requirements
           </p>
         </div>
-        <img src="./images/keyboard.jpg" alt="keyboard" />
+        <img src="./images/products/aq.png" alt="keyboard" />
       </div>
     </div>
     <footer class="my-footer">
@@ -136,15 +136,53 @@
               >Follow us</a
             >
           </h5>
+          <ul class="social-media-list">
+            <li>
+              <img
+                src="./images/social media icons/icons8-facebook-circled-48.png"
+                alt="facebook-icon"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/social media icons/icons8-instagram-48.png"
+                alt="instagram-icon"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/social media icons/icons8-play-button-48.png"
+                alt="youtube-icon"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/social media icons/icons8-linkedin-circled-48.png"
+                alt="linkedin-icon"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/social media icons/icons8-twitter-circled-48.png"
+                alt="twitter-icon"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/social media icons/icons8-whatsapp-48.png"
+                alt="whatsapp-icon"
+              />
+            </li>
+          </ul>
         </div>
-        <div class="site-credits">
+        <!-- <div class="site-credits">
           <p>
             Site Credits:
             <a href="https://www.linkedin.com/in/altamash-qureshi-732362194/"
               ><span>Altamash Qureshi</span></a
             >
           </p>
-        </div>
+        </div> -->
       </div>
     </footer>
   </body>
