--- a/contact.html
+++ b/contact.html
@@ -107,15 +107,53 @@
               >Follow us</a
             >
           </h5>
+          <ul class="social-media-list">
+            <li>
+              <img
+                src="./images/social media icons/icons8-facebook-circled-48.png"
+                alt="facebook-icon"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/social media icons/icons8-instagram-48.png"
+                alt="instagram-icon"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/social media icons/icons8-play-button-48.png"
+                alt="youtube-icon"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/social media icons/icons8-linkedin-circled-48.png"
+                alt="linkedin-icon"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/social media icons/icons8-twitter-circled-48.png"
+                alt="twitter-icon"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/social media icons/icons8-whatsapp-48.png"
+                alt="whatsapp-icon"
+              />
+            </li>
+          </ul>
         </div>
-        <div class="site-credits">
+        <!-- <div class="site-credits">
           <p>
             Site Credits:
             <a href="https://www.linkedin.com/in/altamash-qureshi-732362194/"
               ><span>Altamash Qureshi</span></a
             >
           </p>
-        </div>
+        </div> -->
       </div>
     </footer>
   </body>
