--- a/index.html
+++ b/index.html
@@ -199,41 +199,47 @@
             <a style="text-decoration: underline" href="./index.html"
               >Follow us</a
             >
-            <ul class="social-media-list">
-              <li>
-                <img
-                  src="./images/social media icons/icons8-facebook-circled-48.png"
-                  alt="facebook-icon"
-                />
-              </li>
-              <li>
-                <img
-                  src="./images/social media icons/icons8-instagram-48.png"
-                  alt="instagram-icon"
-                />
-              </li>
-              <li>
-                <img
-                  src="./images/social media icons/icons8-linkedin-circled-48.png"
-                  alt="linkedin-icon"
-                />
-              </li>
-              <li>
-                <img
-                  src="./images/social media icons/icons8-twitter-circled-48.png"
-                  alt="twitter-icon"
-                />
-              </li>
-              <li>
-                <img
-                  src="./images/social media icons/icons8-whatsapp-48.png"
-                  alt="whatsapp-icon"
-                />
-              </li>
-            </ul>
           </h5>
+          <ul class="social-media-list">
+            <li>
+              <img
+                src="./images/social media icons/icons8-facebook-circled-48.png"
+                alt="facebook-icon"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/social media icons/icons8-instagram-48.png"
+                alt="instagram-icon"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/social media icons/icons8-play-button-48.png"
+                alt="youtube-icon"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/social media icons/icons8-linkedin-circled-48.png"
+                alt="linkedin-icon"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/social media icons/icons8-twitter-circled-48.png"
+                alt="twitter-icon"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/social media icons/icons8-whatsapp-48.png"
+                alt="whatsapp-icon"
+              />
+            </li>
+          </ul>
         </div>
-        <div class="site-credits">
+        <!-- <div class="site-credits">
           <p>
             Site Credits:
             <a
@@ -242,7 +248,7 @@
               ><span>Altamash Qureshi</span></a
             >
           </p>
-        </div>
+        </div> -->
       </div>
     </footer>
   </body>
