contacts full done

--- a/contact.html
+++ b/contact.html
@@ -69,14 +69,35 @@
     <div class="main-contact-details">
       <div class="my-contacts">
         <div class="phone contact-details">
+          <div class="contact-icon" style="padding-bottom: 10px">
+            <img
+              src="./images/contacts-icon/icons8-phone-24.png"
+              alt="phone-icon"
+            />
+          </div>
           <h5>Call : <span>8642093333</span></h5>
-          <h5>Call : <span>880189111</span></h5>
+          <h5>Call : <span>8642093333</span></h5>
         </div>
         <div class="mail contact-details">
+          <div class="contact-icon" style="padding-bottom: 10px">
+            <img
+              src="./images/contacts-icon/icons8-important-mail-24.png"
+              alt="phone-icon"
+            />
+          </div>
           <h5>Mail : <span>membranetouch@gmail.com</span></h5>
         </div>
         <div class="address contact-details">
-          <h5>Address : <span>C/91, Mek Industrial Estate Mumbra</span></h5>
+          <div class="contact-icon" style="padding-bottom: 10px">
+            <img
+              src="./images/contacts-icon/icons8-location-update-50.png"
+              alt="phone-icon"
+            />
+          </div>
+          <h5>
+            Address :
+            <span>C/91, Mek Industrial Estate, Mumbra Dist Thane 400612</span>
+          </h5>
         </div>
       </div>
 
