--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
         <h2><b>ABOUT MEMBRANE TOUCH</b></h2>
       </div>
     </div>
-    <div class="about-details">
+    <!-- <div class="about-details">
       <div class="about-details-1">
         <div class="about-details-content">
           <p>
@@ -95,7 +95,7 @@
         </div>
         <img src="./images/products/aq.png" alt="keyboard" />
       </div>
-    </div>
+    </div> -->
     <footer class="my-footer">
       <!-- logo and description of company  -->
       <div class="mtouch-footer-details">
