--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
         <h2><b>ABOUT MEMBRANE TOUCH</b></h2>
       </div>
     </div>
-    <!-- <div class="about-details">
+    <div class="about-details">
       <div class="about-details-1">
         <div class="about-details-content">
           <p>
@@ -95,7 +95,7 @@
         </div>
         <img src="./images/products/aq.png" alt="keyboard" />
       </div>
-    </div> -->
+    </div>
     <footer class="my-footer">
       <!-- logo and description of company  -->
       <div class="mtouch-footer-details">
@@ -120,10 +120,10 @@
               <a href="./index.html"><b>Main menu</b></a>
             </h5>
           </li>
-          <li><a href="./ourservices.html">Our services</a></li>
           <li><a href="./about.html">About us</a></li>
-          <li><a href="./contact.html">Contact us</a></li>
+          <li><a href="./ourservices.html">Our services</a></li>
           <li><a href="./products.html">Products</a></li>
+          <li><a href="./contact.html">Contact us</a></li>
         </ul>
       </div>
       <!-- follow us links of social media and site credits  -->
@@ -171,14 +171,14 @@
             </li>
           </ul>
         </div>
-        <!-- <div class="site-credits">
+        <div class="site-credits">
           <p>
             Site Credits:
             <a href="https://www.linkedin.com/in/altamash-qureshi-732362194/"
               ><span>Altamash Qureshi</span></a
             >
           </p>
-        </div> -->
+        </div>
       </div>
     </footer>
   </body>
