--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,16 @@
               alt="phone-icon"
             />
           </div>
-          <h5>Mail : <span>membranetouch@gmail.com</span></h5>
+          <h5>
+            Mail :
+            <span
+              ><a
+                style="color: black"
+                href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=membranetouch@gmail.com"
+                >membranetouch@gmail.com</a
+              ></span
+            >
+          </h5>
         </div>
         <div class="address contact-details">
           <div class="contact-icon" style="padding-bottom: 10px">
@@ -139,10 +148,10 @@
               <a href="./index.html"><b>Main menu</b></a>
             </h5>
           </li>
-          <li><a href="./ourservices.html">Our services</a></li>
           <li><a href="./about.html">About us</a></li>
-          <li><a href="./contact.html">Contact us</a></li>
+          <li><a href="./ourservices.html">Our services</a></li>
           <li><a href="./products.html">Products</a></li>
+          <li><a href="./contact.html">Contact us</a></li>
         </ul>
       </div>
       <!-- follow us links of social media and site credits  -->
