--- a/ourservices.html
+++ b/ourservices.html
@@ -231,7 +231,7 @@
             </li>
             <li>
               <a
-                href="https://web.whatsapp.com/send?phone=7021104615"
+                href="https://web.whatsapp.com/send?phone=+917021104615"
                 target="_blank"
               >
                 <img
@@ -252,7 +252,9 @@
         </div>
       </div>
       <div class="my-whatsapp">
-        <a href="https://web.whatsapp.com/send?phone=7021104615" target="_blank"
+        <a
+          href="https://web.whatsapp.com/send?phone=+917021104615"
+          target="_blank"
           ><img src="./images/contacts-icon/whatsapp.svg" alt="whatsapp"
         /></a>
       </div>
