--- a/contact.html
+++ b/contact.html
@@ -214,7 +214,7 @@
             </li>
             <li>
               <a
-                href="https://web.whatsapp.com/send?phone=7021104615"
+                href="https://web.whatsapp.com/send?phone=+917021104615"
                 target="_blank"
               >
                 <img
@@ -235,7 +235,9 @@
         </div>
       </div>
       <div class="my-whatsapp">
-        <a href="https://web.whatsapp.com/send?phone=7021104615" target="_blank"
+        <a
+          href="https://web.whatsapp.com/send?phone=+917021104615"
+          target="_blank"
           ><img src="./images/contacts-icon/whatsapp.svg" alt="whatsapp"
         /></a>
       </div>
